# todolist-python

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  test_connection.py  test_phase2.py  test_phase3_api.py
alembic/: env.py
alembic/versions/: cd1443faf836_initial_migration.py
src/todolist/: __init__.py  exceptions.py
src/todolist/api/: dependencies.py  main.py
src/todolist/api/models/: project.py  task.py
src/todolist/api/routers/: projects.py  tasks.py
src/todolist/cli/: __init__.py  cli_interface.py  commands.py  main.py
src/todolist/commands/: __init__.py  autoclose_overdue.py
src/todolist/db/: __init__.py  base.py  session.py
src/todolist/exceptions/: __init__.py  base.py  repository_exceptions.py  service_exceptions.py
src/todolist/models/: __init__.py  project.py  task.py
src/todolist/repositories/: __init__.py  project_repository.py  task_repository.py
src/todolist/services/: __init__.py  config_service.py  project_service.py  task_service.py
src/todolist/storage/: __init__.py  in_memory_storage.py
